--- a/Back end/Ecommerce/src/main/resources/application.properties
+++ b/Back end/Ecommerce/src/main/resources/application.properties
@@ -17,10 +17,7 @@ spring.servlet.multipart.max-request-size=4MB
 spring.servlet.multipart.enabled=false
 
 #Database
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=useSSL=false&characterEncoding=UTF-8
-spring.datasource.username=
-spring.datasource.password=
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
@@ -32,10 +29,8 @@ spring.jpa.open-in-view=false
 spring.datasource.hikari.transaction-isolation = 4
 
 #Oauth 2.0
-password=
-privateKey=
-alias=
-security.oauth2.resource.jwt.key-uri=
+
+security.oauth2.resource.jwt.key-uri=http://localhost:8080/oauth/token_key
 spring.security.filter.dispatcher-types=async,error,request,forward
 security.oauth2.client.access-token-validity-seconds=10
 
@@ -44,8 +39,6 @@ logging.level.root=warn
 
 #HIBERNATE SEARCH
 spring.jpa.properties.hibernate.search.backend.hosts=localhost:9200
-spring.jpa.properties.hibernate.search.backend.username=
-spring.jpa.properties.hibernate.search.backend.password=
 spring.jpa.properties.hibernate.search.backend.protocol = http
 spring.jpa.properties.hibernate.search.backend.request_timeout = 30000
 spring.jpa.properties.hibernate.search.backend.read_timeout = 30000
@@ -54,11 +47,10 @@ spring.jpa.properties.hibernate.search.schema_management.strategy=create-or-upda
 #Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=false
 spring.mail.properties.mail.smtp.ssl.enable=true
+
 
 
