--- a/Front end/package.json
+++ b/Front end/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "megamarket",
-  "proxy": "",
+  "name": "megaclone",
+  "proxy": "http://192.168.1.4:8080/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
